# 15442-final-project

./: .gitignore  BENCHMARK_READINESS.md  README copy.md  README.md  modal_app.py  modal_phase_h.py  modal_phase_m_parity.py  modal_phase_n.py  modal_phase_o_tools.py  modal_sweep.py  pyproject.toml  requirements.txt
benchmarks/: bench_serving_vs_reference.py  kernels_microbench.py
configs/: base.yaml  baseline.yaml  benchmark_full.yaml  benchmark_full_modal.yaml  benchmark_full_modal_v4.yaml  benchmark_joint_smoke_modal.yaml  benchmark_medium.yaml  benchmark_presweep_local.yaml  benchmark_presweep_modal.yaml  benchmark_scale_local_v1.yaml  benchmark_scale_longctx_local_v1.yaml  benchmark_scale_modal_v1.yaml  benchmark_scale_smoke_modal.yaml  benchmark_smoke.yaml  benchmark_smoke_ar.yaml  benchmark_stage1_local.yaml  benchmark_stage1_modal.yaml  phase_h_full_modal.yaml  phase_h_smoke.yaml  phase_n_llama_ar_vs_fused_smoke_modal.yaml  phase_n_llama_longctx_weaker_ar_modal.yaml  phase_n_smoke.yaml  phase_n_smoke_modal.yaml  phase_n_sweep_modal.yaml  phase_n_sweep_modal_gpt2xl_short.yaml  phase_n_sweep_modal_llama2_meta_gated.yaml  phase_n_sweep_modal_primary.yaml  speculative.yaml
data/: mt_bench_scale_prompts.json  mt_bench_subset.json  mt_bench_subset_buckets.md
docs/: BENCHMARK_PHASE15.md  BENCHMARK_READINESS.md  BENCHMARK_SWEEP_COMMANDS.md  PHASE16_ANALYSIS.md  PROFILE_KERNEL_DIAGNOSTIC_TEMPLATE.md  REPO_RESET.md  RESET_PLAN.md
old_impl/: README.md
results/: bench_full_modal_v2.jsonl  initial_impl_sweep_smoke_modal.csv  initial_impl_sweep_smoke_modal_summary.csv  (+4 more)
(+230 files in other folders)
